--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
+              <svg class="benefits-icon">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
               <h3 class="benefits-title">Strategy</h3>
               <p class="benefits-text">
                 Our goal is to identify the business problem to walk away with
@@ -71,6 +74,9 @@
               </p>
             </li>
             <li class="benefits-item">
+              <svg class="benefits-icon">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
               <h3 class="benefits-title">Punctuality</h3>
               <p class="benefits-text">
                 Bring the key message to the brand's audience for the best price
@@ -78,6 +84,9 @@
               </p>
             </li>
             <li class="benefits-item">
+              <svg class="benefits-icon">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
               <h3 class="benefits-title">Diligence</h3>
               <p class="benefits-text">
                 Research and confirm brands that present the strongest digital
@@ -85,6 +94,9 @@
               </p>
             </li>
             <li class="benefits-item">
+              <svg class="benefits-icon">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
               <h3 class="benefits-title">Technologies</h3>
               <p class="benefits-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -111,6 +123,28 @@
               <div class="team-member">
                 <h3 class="team-member-name">Mark Guerrero</h3>
                 <p class="team-member-position">Product Designer</p>
+                <ul class="team-icons">
+                  <li>
+                    <svg class="social-media-team" width="40" height="40">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="social-media-team" width="40" height="40">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="social-media-team" width="40" height="40">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="social-media-team" width="40" height="40">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -123,6 +157,28 @@
               <div class="team-member">
                 <h3 class="team-member-name">Tom Ford</h3>
                 <p class="team-member-position">Frontend Developer</p>
+                <ul class="team-icons">
+                  <li>
+                    <svg class="social-media-team" width="40" height="40">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="social-media-team" width="40" height="40">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="social-media-team" width="40" height="40">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="social-media-team" width="40" height="40">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -135,6 +191,28 @@
               <div class="team-member">
                 <h3 class="team-member-name">Camila Garcia</h3>
                 <p class="team-member-position">Marketing</p>
+                <ul class="team-icons">
+                  <li>
+                    <svg class="social-media-team" width="40" height="40">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="social-media-team" width="40" height="40">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="social-media-team" width="40" height="40">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="social-media-team" width="40" height="40">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -147,6 +225,28 @@
               <div class="team-member">
                 <h3 class="team-member-name">Daniel Wilson</h3>
                 <p class="team-member-position">UI Designer</p>
+                <ul class="team-icons">
+                  <li>
+                    <svg class="social-media-team" width="40" height="40">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="social-media-team" width="40" height="40">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="social-media-team" width="40" height="40">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="social-media-team" width="40" height="40">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -239,13 +339,40 @@
     <!-- Footer -->
     <footer class="page-footer">
       <div class="container">
-        <a href="./index.html" class="logo-footer"
-          >Web<span class="accent-footer">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div>
+          <a href="./index.html" class="logo-footer"
+            >Web<span class="accent-footer">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="media">
+          <h4 class="social-media-title">Social media</h4>
+          <ul class="footer-icons">
+            <li>
+              <svg class="social-media-footer" width="40" height="40">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="social-media-footer" width="40" height="40">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="social-media-footer" width="40" height="40">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="social-media-footer" width="40" height="40">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
