add transformation to portfolio

--- a/index.html
+++ b/index.html
@@ -125,24 +125,30 @@
                 <p class="team-member-position">Product Designer</p>
                 <ul class="team-icons">
                   <li>
-                    <svg class="social-media-team" width="40" height="40">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
+                    <a href="" class="team-icons-link"
+                      ><svg class="social-media-team" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
                   </li>
                   <li>
-                    <svg class="social-media-team" width="40" height="40">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a href="" class="team-icons-link"
+                      ><svg class="social-media-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
                   </li>
                   <li>
-                    <svg class="social-media-team" width="40" height="40">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a href="" class="team-icons-link"
+                      ><svg class="social-media-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
                   </li>
                   <li>
-                    <svg class="social-media-team" width="40" height="40">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
+                    <a href="" class="team-icons-link"
+                      ><svg class="social-media-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -159,24 +165,30 @@
                 <p class="team-member-position">Frontend Developer</p>
                 <ul class="team-icons">
                   <li>
-                    <svg class="social-media-team" width="40" height="40">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
+                    <a href="" class="team-icons-link"
+                      ><svg class="social-media-team" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
                   </li>
                   <li>
-                    <svg class="social-media-team" width="40" height="40">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a href="" class="team-icons-link"
+                      ><svg class="social-media-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
                   </li>
                   <li>
-                    <svg class="social-media-team" width="40" height="40">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a href="" class="team-icons-link"
+                      ><svg class="social-media-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
                   </li>
                   <li>
-                    <svg class="social-media-team" width="40" height="40">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
+                    <a href="" class="team-icons-link"
+                      ><svg class="social-media-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -193,24 +205,30 @@
                 <p class="team-member-position">Marketing</p>
                 <ul class="team-icons">
                   <li>
-                    <svg class="social-media-team" width="40" height="40">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
+                    <a href="" class="team-icons-link"
+                      ><svg class="social-media-team" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
                   </li>
                   <li>
-                    <svg class="social-media-team" width="40" height="40">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a href="" class="team-icons-link"
+                      ><svg class="social-media-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
                   </li>
                   <li>
-                    <svg class="social-media-team" width="40" height="40">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a href="" class="team-icons-link"
+                      ><svg class="social-media-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
                   </li>
                   <li>
-                    <svg class="social-media-team" width="40" height="40">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
+                    <a href="" class="team-icons-link"
+                      ><svg class="social-media-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -227,24 +245,30 @@
                 <p class="team-member-position">UI Designer</p>
                 <ul class="team-icons">
                   <li>
-                    <svg class="social-media-team" width="40" height="40">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
+                    <a href="" class="team-icons-link"
+                      ><svg class="social-media-team" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
                   </li>
                   <li>
-                    <svg class="social-media-team" width="40" height="40">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a href="" class="team-icons-link"
+                      ><svg class="social-media-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
                   </li>
                   <li>
-                    <svg class="social-media-team" width="40" height="40">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a href="" class="team-icons-link"
+                      ><svg class="social-media-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
                   </li>
                   <li>
-                    <svg class="social-media-team" width="40" height="40">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
+                    <a href="" class="team-icons-link"
+                      ><svg class="social-media-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -260,72 +284,127 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                src="./images/banking-app.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-img">
+                <img
+                  src="./images/banking-app.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-box">
                 <h3 class="portfolio-item-title">Banking App</h3>
                 <p class="portfolio-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/cashless-payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-img">
+                <img
+                  src="./images/cashless-payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-box">
                 <h3 class="portfolio-item-title">Cashless Payment</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/meditation-app.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-img">
+                <img
+                  src="./images/meditation-app.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-box">
                 <h3 class="portfolio-item-title">Meditation App</h3>
                 <p class="portfolio-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/taxi-service.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-img">
+                <img
+                  src="./images/taxi-service.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-box">
                 <h3 class="portfolio-item-title">Taxi Service</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/screen-illustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-img">
+                <img
+                  src="./images/screen-illustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-box">
                 <h3 class="portfolio-item-title">Screen Illustrations</h3>
                 <p class="portfolio-item-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/online-courses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-img">
+                <img
+                  class="portfolio-img"
+                  src="./images/online-courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-box">
                 <h3 class="portfolio-item-title">Online Courses</h3>
                 <p class="portfolio-item-text">Marketing</p>
@@ -352,24 +431,28 @@
           <h4 class="social-media-title">Social media</h4>
           <ul class="footer-icons">
             <li>
-              <svg class="social-media-footer" width="40" height="40">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
+              <a href="" class="social-media-link"
+                ><svg class="social-media-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use></svg
+              ></a>
             </li>
             <li>
-              <svg class="social-media-footer" width="40" height="40">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
+              <a href="" class="social-media-link"
+                ><svg class="social-media-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use></svg
+              ></a>
             </li>
             <li>
-              <svg class="social-media-footer" width="40" height="40">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
+              <a href="" class="social-media-link"
+                ><svg class="social-media-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use></svg
+              ></a>
             </li>
             <li>
-              <svg class="social-media-footer" width="40" height="40">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
+              <a href="" class="social-media-link"
+                ><svg class="social-media-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
