--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
     <!-- Footer -->
     <footer class="page-footer">
       <div class="container">
-        <div>
+        <div class="logo-text">
           <a href="./index.html" class="logo-footer"
             >Web<span class="accent-footer">Studio</span></a
           >
@@ -428,27 +428,27 @@
           </p>
         </div>
         <div class="media">
-          <h4 class="social-media-title">Social media</h4>
+          <p class="social-media-title">Social media</p>
           <ul class="footer-icons">
-            <li>
+            <li class="footer-icons-items">
               <a href="" class="social-media-link"
                 ><svg class="social-media-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use></svg
               ></a>
             </li>
-            <li>
+            <li class="footer-icons-items">
               <a href="" class="social-media-link"
                 ><svg class="social-media-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use></svg
               ></a>
             </li>
-            <li>
+            <li class="footer-icons-items">
               <a href="" class="social-media-link"
                 ><svg class="social-media-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use></svg
               ></a>
             </li>
-            <li>
+            <li class="footer-icons-items">
               <a href="" class="social-media-link"
                 ><svg class="social-media-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use></svg
