--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
-              <svg class="benefits-icon">
-                <use href="./images/icons.svg#icon-antenna"></use>
-              </svg>
+              <div class="benefits-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">Strategy</h3>
               <p class="benefits-text">
                 Our goal is to identify the business problem to walk away with
@@ -74,9 +76,11 @@
               </p>
             </li>
             <li class="benefits-item">
-              <svg class="benefits-icon">
-                <use href="./images/icons.svg#icon-clock"></use>
-              </svg>
+              <div class="benefits-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">Punctuality</h3>
               <p class="benefits-text">
                 Bring the key message to the brand's audience for the best price
@@ -84,9 +88,11 @@
               </p>
             </li>
             <li class="benefits-item">
-              <svg class="benefits-icon">
-                <use href="./images/icons.svg#icon-diagram"></use>
-              </svg>
+              <div class="benefits-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">Diligence</h3>
               <p class="benefits-text">
                 Research and confirm brands that present the strongest digital
@@ -94,9 +100,11 @@
               </p>
             </li>
             <li class="benefits-item">
-              <svg class="benefits-icon">
-                <use href="./images/icons.svg#icon-astronaut"></use>
-              </svg>
+              <div class="benefits-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">Technologies</h3>
               <p class="benefits-text">
                 Design practice focused on digital experiences. We bring forth a
