--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <h3 class="team-member-name">Mark Guerrero</h3>
                 <p class="team-member-position">Product Designer</p>
                 <ul class="team-icons">
-                  <li>
+                  <li class="team-icons-items">
                     <a href="" class="team-icons-link"
                       ><svg class="social-media-team" width="16" height="16">
                         <use
@@ -140,19 +140,19 @@
                         ></use></svg
                     ></a>
                   </li>
-                  <li>
+                  <li class="team-icons-items">
                     <a href="" class="team-icons-link"
                       ><svg class="social-media-team" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
-                  <li>
+                  <li class="team-icons-items">
                     <a href="" class="team-icons-link"
                       ><svg class="social-media-team" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
-                  <li>
+                  <li class="team-icons-items">
                     <a href="" class="team-icons-link"
                       ><svg class="social-media-team" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
@@ -172,7 +172,7 @@
                 <h3 class="team-member-name">Tom Ford</h3>
                 <p class="team-member-position">Frontend Developer</p>
                 <ul class="team-icons">
-                  <li>
+                  <li class="team-icons-items">
                     <a href="" class="team-icons-link"
                       ><svg class="social-media-team" width="16" height="16">
                         <use
@@ -180,19 +180,19 @@
                         ></use></svg
                     ></a>
                   </li>
-                  <li>
+                  <li class="team-icons-items">
                     <a href="" class="team-icons-link"
                       ><svg class="social-media-team" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
-                  <li>
+                  <li class="team-icons-items">
                     <a href="" class="team-icons-link"
                       ><svg class="social-media-team" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
-                  <li>
+                  <li class="team-icons-items">
                     <a href="" class="team-icons-link"
                       ><svg class="social-media-team" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
@@ -212,7 +212,7 @@
                 <h3 class="team-member-name">Camila Garcia</h3>
                 <p class="team-member-position">Marketing</p>
                 <ul class="team-icons">
-                  <li>
+                  <li class="team-icons-items">
                     <a href="" class="team-icons-link"
                       ><svg class="social-media-team" width="16" height="16">
                         <use
@@ -220,19 +220,19 @@
                         ></use></svg
                     ></a>
                   </li>
-                  <li>
+                  <li class="team-icons-items">
                     <a href="" class="team-icons-link"
                       ><svg class="social-media-team" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
-                  <li>
+                  <li class="team-icons-items">
                     <a href="" class="team-icons-link"
                       ><svg class="social-media-team" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
-                  <li>
+                  <li class="team-icons-items">
                     <a href="" class="team-icons-link"
                       ><svg class="social-media-team" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
@@ -252,7 +252,7 @@
                 <h3 class="team-member-name">Daniel Wilson</h3>
                 <p class="team-member-position">UI Designer</p>
                 <ul class="team-icons">
-                  <li>
+                  <li class="team-icons-items">
                     <a href="" class="team-icons-link"
                       ><svg class="social-media-team" width="16" height="16">
                         <use
@@ -260,19 +260,19 @@
                         ></use></svg
                     ></a>
                   </li>
-                  <li>
+                  <li class="team-icons-items">
                     <a href="" class="team-icons-link"
                       ><svg class="social-media-team" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
-                  <li>
+                  <li class="team-icons-items">
                     <a href="" class="team-icons-link"
                       ><svg class="social-media-team" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
-                  <li>
+                  <li class="team-icons-items">
                     <a href="" class="team-icons-link"
                       ><svg class="social-media-team" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
