--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
         <nav class="page-nav">
           <a href="./index.html" class="logo">Web<span>Studio</span></a>
           <ul class="menu">
-            <li><a href="./index.html" class="menu-link">Studio</a></li>
-            <li><a href="" class="menu-link">Portfolio</a></li>
-            <li><a href="" class="menu-link">Contacts</a></li>
+            <li class="menu-item">
+              <a href="./index.html" class="menu-link">Studio</a>
+            </li>
+            <li class="menu-item">
+              <a href="" class="menu-link">Portfolio</a>
+            </li>
+            <li class="menu-item"><a href="" class="menu-link">Contacts</a></li>
           </ul>
         </nav>
         <address class="contacts">
