--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         </nav>
         <address class="contacts">
           <ul class="contact-info">
-            <li>
+            <li class="contact-item">
               <a href="mailto:info@devstudio.com" class="contact-link"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="contact-item">
               <a href="tel:+110001111111" class="contact-link"
                 >+11 (000) 111-11-11</a
               >
@@ -393,7 +393,6 @@
             <li class="portfolio-item">
               <div class="portfolio-img">
                 <img
-                  class="portfolio-img"
                   src="./images/online-courses.jpg"
                   alt="Online Courses"
                   width="360"
